--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+<!DOCTYPE html>
+<html>
+<head>
+<title> hand code portfolio </title>
+</head>
+<body>
+<h1> menu </h1>
+</body>
+</html>
